fix: Make sure that the empty message is aligned in the center of the SP container
Jira Issue DD-1926

--- a/css/common.scss
+++ b/css/common.scss
@@ -197,6 +197,7 @@ div.dtsp-panesContainer {
 	clear: both;
 	padding-left: 0;
 	padding-right: 0;
+	text-align: center;
 
 	div.dtsp-searchPanes {
 		display:flex;
